frontend/test/should_pass/execscope_If.grg
using exectype;

rule r
{
	modify  {
		exec(if{x:int=42; y=x; z=x} && if{x:string="Gnampf!"; y=x; z=x} && x:foo=foo::Bar);
	}
}