frontend/test/should_fail/execscope_For.grg
using exectype;

rule r
{
	modify  {
		exec(x:string="Gnampf!" ;> for{x:int in y; z=x});
	}
}